--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "Portfolio",
   "version": "0.0.0",
-  "description": "Personal Portfolio with HarpJS",
+  "description": "Portfolio Boilerplate with HarpJS",
   "main": "gulpfile.js",
+  "repository" :{
+    "type" : "git"
+  , "url" : "https://github.com/ccamilobedoya/Harp-Portfolio-Base.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
